--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,8 @@ updates:
 - package-ecosystem: "gomod"
   directory: "/"
   schedule:
-    interval: "monthly"
-    time: "10:00"
+    interval: "daily"
+    time: "12:00"
     timezone: "Asia/Tokyo"
   commit-message:
     prefix: "change"
